--- a/src/index.css
+++ b/src/index.css
@@ -6,46 +6,26 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
   text-align: center;
 }
 
-main {
+div#root {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
-  max-height: 400px;
 }
 
-.table-container {
-  width: fit-content;
-  max-height: 400px;
-  overflow-y: auto;
-  overflow-x: hidden;
-  border: 5px inset black;
-}
+@media only screen and (min-width: 1358px) {
+  .input-output {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+  }
 
-.table-container * {
-  border: 1px solid black;
-  font-size: 16px;
-  text-align: center;
-}
-
-button {
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.table-container :is(input, select, option) {
-  font-weight: bold;
-}
-
-p {
-  font-size: 30px;
-}
-
-header :is(select, option) {
-  font-size: 18px;
-  font-weight: bold;
+  .input-output > * {
+    margin: 15px 20px 16px !important;
+  }
 }
 
 code {
