--- a/src/styles/ResultsPanel.css
+++ b/src/styles/ResultsPanel.css
@@ -32,6 +32,7 @@
 
 @media only screen and (min-width: 1358px) {
     #results-panel {
+        width: fit-content;
         height: fit-content;
     }
 }
