Change slider color, adjust scale input bounds

--- a/src/styles/TableControls.css
+++ b/src/styles/TableControls.css
@@ -20,6 +20,10 @@
     font-weight: bolder;
 }
 
+.slider-container input[type="range"] {
+    accent-color: blue;
+}
+
 #table-controls button {
     font-size: 18px;
     font-weight: bolder;
